<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cityFeatureActivity">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="409dp"
        android:layout_height="180dp"
        android:background="@color/blue"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        />


    <ImageView
        android:layout_width="409dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="@id/linearLayout1"
        app:layout_constraintStart_toStartOf="@id/linearLayout1"
        app:layout_constraintEnd_toEndOf="@id/linearLayout1"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout1"
        android:src="@drawable/img_2"
         />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_city_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/inputCityName"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

    <EditText
        android:id="@+id/inputCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginStart="50dp"
        android:ems="15"
        android:hint="@string/eg_una"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cityName" />

    <TextView
        android:id="@+id/feature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/enter_features"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/inputCityName"
        app:layout_constraintTop_toBottomOf="@+id/inputCityName" />

    <EditText
        android:id="@+id/inputFeature"
        android:hint="@string/eg_air_conditioner_etc_optional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="15"
        app:layout_constraintStart_toStartOf="@+id/inputCityName"
        app:layout_constraintTop_toTopOf="@id/feature" />

    <Button
        android:id="@+id/buttonSearchHotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFeature"
        android:text="@string/search_hotels"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/orange"
        android:paddingVertical="15dp"

        />

        <TextView
            android:id="@+id/nearby_search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/buttonSearchHotel"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Search Nearby Hotels"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:gravity="center"
            />

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/blue"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toBottomOf="@id/nearby_search_text"
            app:layout_constraintStart_toStartOf="@id/nearby_search_text"
            app:layout_constraintEnd_toEndOf="@id/nearby_search_text"
            />


</androidx.constraintlayout.widget.ConstraintLayout>